<resources>
    <string name="app_name">Task Planner</string>
    <string name="repeat_picker_title">Repeat</string>
    <string name="MonthButtonText">Month</string>
    <string name="WeekButtonText">Week</string>
    <string name="DayButtonText">Day</string>
    <string name="event_description_name">Descriprion</string>
    <string name="done_menu_item_title">Done</string>
    <string name="current_date_menu_item_name">Current Date</string>
    <string name="select_date_menu_item_name">Select Date</string>
    <string name="menu_settings_name">Settings</string>
    <string name="delete_button_name">Delete</string>
    <string name="edit_button_name">Edit</string>
    <string name="event_name_label">Name</string>
    <string name="start_time_label">Start</string>
    <string name="end_time_label">End</string>
    <string name="repeat_type_label">Repeat every</string>
    <string name="repeat_days_label">Repeat days</string>
    <string name="sunday_checkbox_text">Sun</string>
    <string name="monday_checkbox_text">Mon</string>
    <string name="tuesday_checkbox_text">Tue</string>
    <string name="wednesday_checkbox_text">Wed</string>
    <string name="thuthday_checkbox_text">Thu</string>
    <string name="friday_checkbox_text">Fri</string>
    <string name="saturday_checkbox_text">Sat</string>
    <string name="duration_label">Duration</string>
    <string name="forever_radiobutton_text">Forever</string>
    <string name="count_radiobutton_text">Specific number of times</string>
    <string name="until_radiobutton_text">Until</string>
    <string name="repeat_checkbox_text">Repeat</string>
    <string name="logout_button_text">Logout</string>
    <string name="login_button_text">Login</string>
    <string name="menu_share_name">Share</string>
    <string name="checkbox_read_name">Read</string>
    <string name="checkbox_update_name">Update</string>
    <string name="checkbox_delete_name">Delete</string>
    <string name="crate">Crate</string>
    <string name="share_token_label">Share token:</string>
    <string name="copy_button_label">Copy</string>
    <string name="create_permission_for_the_event_label">Share permission for the event</string>
    <string name="create_permission_for_all_event_label">Share permission for all events</string>
    <string name="activate_token_menu_button">Activate token</string>
    <string name="all_permissions_menu_button">All permissions</string>
    <string name="all_events_perrmission_type_name">All events</string>
    <string name="max_time_value_display_name">Forever</string>
    <string name="granted_permissions_button_name">Granted Permissions</string>
    <string name="received_permissions_button_name">Received Permissions</string>
</resources>
