<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_share_name"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings_name"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/selectDate"
        android:title="@string/select_date_menu_item_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/goToCurrentDate"
        android:title="@string/current_date_menu_item_name"
        app:showAsAction="never" />
</menu>