<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/createPermissionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="22sp" />

    <CheckBox
        android:id="@+id/cbReadPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_read_name" />

    <CheckBox
        android:id="@+id/cbUpdatePermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_update_name" />

    <CheckBox
        android:id="@+id/cbDeletePermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_delete_name" />

    <Button
        android:id="@+id/bCreateShareToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crate"/>

    <LinearLayout
        android:id="@+id/llPermissionToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/permissionTokenLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_token_label"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvPermissionToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#226CE7"/>

        <Button
            android:id="@+id/copyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_button_label"/>

    </LinearLayout>
</LinearLayout>